# WordCount

./: .gitignore  README.md  WordCount.sln  pyproject.toml  requirements.txt
WordCount/: WordBank.py  WordCount.py  WordCount.pyproj  class1.py  w.py
WordCount/env/Scripts/: Activate.ps1  activate  activate.bat  nltk-script.py
word_count/: __main__.py  requirements.txt  word_bank.py  word_count.py
word_count/sample_data/: A Tale of Two Cities, by Charles Dickens.txt  Alice’s Adventures in Wonderland, by Lewis Carroll.txt  Frankenstein, by Mary Wollstonecraft (Godwin) Shelley.txt  Heart of Darkness, by Joseph Conrad.txt  Moby Dick; or The Whale, by Herman.txt  Pride and Prejudice, by Jane Austen.txt
