[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "word-count"
authors = [
    {name = "Sydney Jones", email = "sydney.u.jones@gmail.com"},
]
description = "Analyzes word-frequency within a corpus of texts and provides a count of most-used words"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "certifi==2022.12.7",
    "pick==1.0.0",
    "wincertstore==0.2",
    "windows-curses==2.1.0; sys_platform == 'win32'",
    "nltk==3.8.1",
]
version="1.0.0"

[tool.black]
line-length = 100
